<resources>
    <string name="app_name">鹰眼巡更</string>
    <string name="inputpw">密码</string>
    <string name="inputun">账号</string>
    <string name="welcometext">鹰眼系统</string>
    <string name="loginbt">登&#160;&#160;&#160;&#160;&#160;录</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="peekpatroltext">查询巡检情况</string>
    <string name="exceptiontext">查询异常信息</string>
    <string name="testtext">指定巡检任务</string>
    <string name="addpathtext">初始化线路</string>
    <string name="uppointtext">变更巡检点次序</string>
    <string name="signtext">签到</string>
    <string name="supporttext">请求支援</string>
    <string name="seekpath">&#032;查看巡检路线</string>
    <string name="rfid_search">请将手机靠近标签</string>


    <string name="error">Error</string>
    <string name="no_nfc">No NFC found on this device\n设备不支持NFC!</string>
    <string name="nfc_disabled">NFC is not enabled. Please go to the wireless settings to enable it.</string>
    <string name="check_point">检查点 :</string>
    <string name="path_id">路线ID :</string>
    <string name="check_guy">检查员 :</string>
    <string name="exception_info">异常信息描述 :</string>
    <string name="startpatrol">开始巡检</string>
    <string name="exception_bt">异常报告</string>
    <string name="bt_submitexp">提交结果</string>

</resources>
