<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    tools:context="com.psn.patrol.serverfragment.BusinessFg"
    >

    <RelativeLayout
        android:id="@+id/slideView"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_gravity="center"
        android:gravity="center">

        <com.psn.patrol.viewflipper.PageViewFlipper
            android:id="@+id/viewflipper"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/lv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/img1" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/img2" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/img3" />
        </com.psn.patrol.viewflipper.PageViewFlipper>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="6dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <ImageView
                android:id="@+id/dian1"
                android:layout_width="9dp"
                android:layout_height="9dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/dian_select" />

            <ImageView
                android:id="@+id/dian2"
                android:layout_width="9dp"
                android:layout_height="9dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/dian_select" />

            <ImageView
                android:id="@+id/dian3"
                android:layout_width="9dp"
                android:layout_height="9dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/dian_select" />

        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/left_lay"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            >

            <Button

                android:id="@+id/seekpatrol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_weight="0.5"
                android:paddingBottom="110dp"
                android:paddingRight="30dp"
                android:textColor="@color/white"
                android:background="@drawable/s1"
                android:text="@string/peekpatroltext"
                android:textSize="20sp" />

            <Button
                android:id="@+id/updatapoint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:background="@drawable/s2"
                android:paddingBottom="100dp"
                android:textColor="@color/white"
                android:paddingRight="20dp"
                android:text="@string/uppointtext"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="7dp"
            android:layout_weight="0.8"
            android:orientation="vertical">

            <Button
                android:id="@+id/exception"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp"
                android:background="@drawable/s3"
                android:paddingLeft="45dp"
                android:layout_weight="1"
                android:text="@string/exceptiontext"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/addpath"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp"
                android:background="@drawable/s4"
                android:paddingBottom="110dp"
                android:layout_weight="2"
                android:textColor="@color/white"
                android:paddingRight="10dp"
                android:text="@string/addpathtext"
                android:textSize="20sp" />
            <Button
                android:id="@+id/patroltest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/testtext"
                android:background="@drawable/s5"
                android:textColor="@color/white"
                android:paddingLeft="48dp"
                android:textSize="19sp" />

        </LinearLayout>


    </LinearLayout>

</LinearLayout>
