<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    tools:context="com.psn.patrol.clientactivity.ExceptionAty"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/black" >

        <ImageView
            android:id="@+id/topButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="18dp"
            android:src="@android:drawable/ic_menu_revert" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="异常描述"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/activity_selectimg_send"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="12dp"
            android:gravity="center"
            android:text="提交"
            android:clickable="true"
            android:textColor="@drawable/text_while"
            android:textSize="20sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            >
            <TextView
                android:id="@+id/path_id"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:text="@string/path_id"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_path_id"
                android:layout_width="240dp"
                android:layout_height="40dp"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/path_id"
                android:layout_toEndOf="@+id/path_id"
                android:textColor="@color/black"
                android:enabled="false"
                android:background="@drawable/textview_border" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            >
            <TextView
                android:id="@+id/check_point"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:text="@string/check_point"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_check_point"
                android:layout_width="240dp"
                android:layout_height="40dp"
                android:enabled="false"
                android:layout_alignParentTop="true"
                android:textColor="@color/black"
                android:layout_toRightOf="@+id/check_point"
                android:layout_toEndOf="@+id/check_point"
                android:background="@drawable/textview_border" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            >

            <TextView
                android:id="@+id/check_guy"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:text="@string/check_guy"
                android:textSize="20sp" />
            <EditText
                android:id="@+id/et_check_guy"
                android:layout_width="240dp"
                android:layout_height="40dp"
                android:enabled="false"
                android:textColor="@color/black"
                android:layout_toEndOf="@+id/check_guy"
                android:layout_toRightOf="@+id/check_guy"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                android:background="@drawable/textview_border" />
        </RelativeLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="20dp"
            android:text="@string/exception_info"
            />

        <EditText
            android:id="@+id/et_exception"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:background="@drawable/textview_border"
            android:gravity="left|top"
            android:hint="详述该检查点异常情况......"
            android:inputType="textMultiLine"
            android:maxLines="20"
            android:scrollbars="vertical" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/tvResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="选择处理人:" />

            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                />

        </LinearLayout>


        <GridView
            android:id="@+id/noScrollgridview"
            android:layout_width="290dp"
            android:layout_height="240dp"
            android:layout_marginTop="6dp"
            android:horizontalSpacing="3dp"
            android:numColumns="4"
            android:scrollbars="none"
            android:verticalSpacing="5dp" >
        </GridView>
    </LinearLayout>

</LinearLayout>
