<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    tools:context="com.psn.patrol.clientactivity.ClientAty">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/black" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="鹰眼巡检"
            android:textColor="#ffffff"
            android:textSize="20sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/slideView"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_gravity="center"
        android:gravity="center">

        <ViewFlipper
            android:id="@+id/viewflipper"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/lv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/img1" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/img2" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/img3" />
        </ViewFlipper>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="6dp">

            <ImageView
                android:id="@+id/dian1"
                android:layout_width="9dp"
                android:layout_height="9dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/dian_select" />

            <ImageView
                android:id="@+id/dian2"
                android:layout_width="9dp"
                android:layout_height="9dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/dian_select" />

            <ImageView
                android:id="@+id/dian3"
                android:layout_width="9dp"
                android:layout_height="9dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/dian_select" />

        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="3"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/left_lay"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:orientation="vertical"
            android:weightSum="1">

            <Button
                android:id="@+id/client_sign"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_weight="0.50"
                android:background="@drawable/c3"
                android:textColor="@color/white"
                android:paddingLeft="15dp"
                android:text="@string/signtext"
                android:textSize="24sp" />

            <Button
                android:id="@+id/client_support"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_weight="0.50"
                android:textColor="@color/white"
                android:paddingLeft="50dp"
                android:text="@string/supporttext"
                android:background="@drawable/c4"
                android:textSize="24dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_weight="0.3"
            android:orientation="vertical">

            <Button
                android:id="@+id/client_gps"
                android:layout_width="165dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:paddingBottom="145dp"
                android:background="@drawable/c2"
                android:text="GPS"
                android:paddingRight="50dp"
                android:textColor="@color/white"
                android:textSize="28sp" />

        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/client_seekpath"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/c1"
        android:paddingLeft="60dp"
        android:text="@string/seekpath"
        android:textColor="@color/white"
        android:textSize="24sp" />

</LinearLayout>
